main.css
* {
  box-sizing: border-box;
}

body {
    background-color: rgba(0, 0, 0, 0.65);
    font-family: 'Noto Sans';
}

body.white {
    background-color: rgba(255, 255, 255, 0.9);
}

h1 {
    text-align: center;
    font-family: 'Ubuntu';
}

p {
    text-align: center;
    color: black;
}

p.red {
    color: rgb(255, 0, 0);
    font-weight: bold;
}

a {
    color: dodgerblue;
}


/* dividers */

div {
    padding-top: 40px;
    padding-left: 30px;
    padding-right: 30px;
    padding-bottom: 50px;
    
    background-color: rgba(255, 255, 255, 0.9);
}

.h {
    padding: 1px;
    margin-top: 20px;
    margin-bottom: 20px;
    background-color: rgba(50, 255, 50, 0.8);
}

